# serializer version: 1
# name: TestResponsesCount.test_responses_count
  '''
  /* user_id:0 request:_snapshot_ */
  SELECT JSONExtractString(properties, '$survey_id') as survey_id,
         count()
  FROM events
  WHERE team_id = 99999
    AND event = 'survey sent'
    AND timestamp >= '2024-01-21 14:40:09'
    AND uuid IN
      (SELECT argMax(uuid, timestamp)
       FROM events
       WHERE team_id = 99999
         AND timestamp >= '2024-01-21 14:40:09'
         AND event = 'survey sent'
       GROUP BY JSONExtractString(properties, '$survey_id'),
                CASE
                    WHEN COALESCE(JSONExtractString(properties, '$survey_submission_id'), '') = '' THEN toString(uuid)
                    ELSE JSONExtractString(properties, '$survey_submission_id')
                END)
  GROUP BY survey_id
  '''
# ---
# name: TestResponsesCount.test_responses_count_only_after_first_survey_started
  '''
  /* user_id:0 request:_snapshot_ */
  SELECT JSONExtractString(properties, '$survey_id') as survey_id,
         count()
  FROM events
  WHERE team_id = 99999
    AND event = 'survey sent'
    AND timestamp >= '2024-04-25 14:40:09'
    AND uuid IN
      (SELECT argMax(uuid, timestamp)
       FROM events
       WHERE team_id = 99999
         AND timestamp >= '2024-04-25 14:40:09'
         AND event = 'survey sent'
       GROUP BY JSONExtractString(properties, '$survey_id'),
                CASE
                    WHEN COALESCE(JSONExtractString(properties, '$survey_submission_id'), '') = '' THEN toString(uuid)
                    ELSE JSONExtractString(properties, '$survey_submission_id')
                END)
  GROUP BY survey_id
  '''
# ---
# name: TestResponsesCount.test_responses_count_with_partial_responses
  '''
  /* user_id:0 request:_snapshot_ */
  SELECT JSONExtractString(properties, '$survey_id') as survey_id,
         count()
  FROM events
  WHERE team_id = 99999
    AND event = 'survey sent'
    AND timestamp >= '2024-06-10 11:00:00'
    AND uuid IN
      (SELECT argMax(uuid, timestamp)
       FROM events
       WHERE team_id = 99999
         AND timestamp >= '2024-06-10 11:00:00'
         AND event = 'survey sent'
       GROUP BY JSONExtractString(properties, '$survey_id'),
                CASE
                    WHEN COALESCE(JSONExtractString(properties, '$survey_submission_id'), '') = '' THEN toString(uuid)
                    ELSE JSONExtractString(properties, '$survey_submission_id')
                END)
  GROUP BY survey_id
  '''
# ---
# name: TestSurveysAPIList.test_list_surveys
  '''
  SELECT "insights_filesystem"."team_id",
         "insights_filesystem"."id",
         "insights_filesystem"."path",
         "insights_filesystem"."depth",
         "insights_filesystem"."type",
         "insights_filesystem"."ref",
         "insights_filesystem"."href",
         "insights_filesystem"."shortcut",
         "insights_filesystem"."meta",
         "insights_filesystem"."created_at",
         "insights_filesystem"."created_by_id",
         "insights_filesystem"."project_id"
  FROM "insights_filesystem"
  WHERE ("insights_filesystem"."ref" = '0001'
         AND "insights_filesystem"."team_id" = 99999
         AND "insights_filesystem"."type" = 'survey'
         AND NOT ("insights_filesystem"."shortcut"
                  AND "insights_filesystem"."shortcut" IS NOT NULL))
  '''
# ---
# name: TestSurveysAPIList.test_list_surveys.1
  '''
  SELECT "insights_filesystem"."team_id",
         "insights_filesystem"."id",
         "insights_filesystem"."path",
         "insights_filesystem"."depth",
         "insights_filesystem"."type",
         "insights_filesystem"."ref",
         "insights_filesystem"."href",
         "insights_filesystem"."shortcut",
         "insights_filesystem"."meta",
         "insights_filesystem"."created_at",
         "insights_filesystem"."created_by_id",
         "insights_filesystem"."project_id"
  FROM "insights_filesystem"
  WHERE ("insights_filesystem"."ref" = '0001'
         AND "insights_filesystem"."team_id" = 99999
         AND "insights_filesystem"."type" = 'feature_flag'
         AND NOT ("insights_filesystem"."shortcut"
                  AND "insights_filesystem"."shortcut" IS NOT NULL))
  '''
# ---
# name: TestSurveysAPIList.test_list_surveys.10
  '''
  SELECT "insights_team"."id",
         "insights_team"."uuid",
         "insights_team"."organization_id",
         "insights_team"."parent_team_id",
         "insights_team"."project_id",
         "insights_team"."api_token",
         "insights_team"."app_urls",
         "insights_team"."name",
         "insights_team"."slack_incoming_webhook",
         "insights_team"."created_at",
         "insights_team"."updated_at",
         "insights_team"."anonymize_ips",
         "insights_team"."completed_snippet_onboarding",
         "insights_team"."has_completed_onboarding_for",
         "insights_team"."onboarding_tasks",
         "insights_team"."ingested_event",
         "insights_team"."person_processing_opt_out",
         "insights_team"."secret_api_token",
         "insights_team"."secret_api_token_backup",
         "insights_team"."session_recording_opt_in",
         "insights_team"."session_recording_sample_rate",
         "insights_team"."session_recording_minimum_duration_milliseconds",
         "insights_team"."session_recording_linked_flag",
         "insights_team"."session_recording_network_payload_capture_config",
         "insights_team"."session_recording_masking_config",
         "insights_team"."session_recording_url_trigger_config",
         "insights_team"."session_recording_url_blocklist_config",
         "insights_team"."session_recording_event_trigger_config",
         "insights_team"."session_recording_trigger_match_type_config",
         "insights_team"."session_replay_config",
         "insights_team"."session_recording_retention_period",
         "insights_team"."session_recording_encryption",
         "insights_team"."conversations_enabled",
         "insights_team"."conversations_settings",
         "insights_team"."proactive_tasks_enabled",
         "insights_team"."survey_config",
         "insights_team"."surveys_opt_in",
         "insights_team"."product_tours_opt_in",
         "insights_team"."capture_console_log_opt_in",
         "insights_team"."capture_performance_opt_in",
         "insights_team"."capture_dead_clicks",
         "insights_team"."autocapture_opt_out",
         "insights_team"."autocapture_web_vitals_opt_in",
         "insights_team"."autocapture_web_vitals_allowed_metrics",
         "insights_team"."autocapture_exceptions_opt_in",
         "insights_team"."autocapture_exceptions_errors_to_ignore",
         "insights_team"."logs_settings",
         "insights_team"."heatmaps_opt_in",
         "insights_team"."receive_org_level_activity_logs",
         "insights_team"."web_analytics_pre_aggregated_tables_enabled",
         "insights_team"."web_analytics_pre_aggregated_tables_version",
         "insights_team"."flags_persistence_default",
         "insights_team"."feature_flag_confirmation_enabled",
         "insights_team"."feature_flag_confirmation_message",
         "insights_team"."default_evaluation_environments_enabled",
         "insights_team"."require_evaluation_environment_tags",
         "insights_team"."default_evaluation_contexts_enabled",
         "insights_team"."require_evaluation_contexts",
         "insights_team"."session_recording_version",
         "insights_team"."signup_token",
         "insights_team"."is_demo",
         "insights_team"."access_control",
         "insights_team"."week_start_day",
         "insights_team"."inject_web_apps",
         "insights_team"."test_account_filters",
         "insights_team"."test_account_filters_default_checked",
         "insights_team"."path_cleaning_filters",
         "insights_team"."timezone",
         "insights_team"."data_attributes",
         "insights_team"."person_display_name_properties",
         "insights_team"."live_events_columns",
         "insights_team"."recording_domains",
         "insights_team"."human_friendly_comparison_periods",
         "insights_team"."cookieless_server_hash_mode",
         "insights_team"."primary_dashboard_id",
         "insights_team"."default_data_theme",
         "insights_team"."extra_settings",
         "insights_team"."modifiers",
         "insights_team"."correlation_config",
         "insights_team"."session_recording_retention_period_days",
         "insights_team"."external_data_workspace_id",
         "insights_team"."external_data_workspace_last_synced_at",
         "insights_team"."api_query_rate_limit",
         "insights_team"."revenue_tracking_config",
         "insights_team"."drop_events_older_than",
         "insights_team"."base_currency",
         "insights_team"."experiment_recalculation_time",
         "insights_team"."default_experiment_confidence_level",
         "insights_team"."default_experiment_stats_method",
         "insights_team"."business_model"
  FROM "insights_team"
  WHERE "insights_team"."api_token" = 'token123'
  LIMIT 21
  '''
# ---
# name: TestSurveysAPIList.test_list_surveys.11
  '''
  SELECT "insights_survey"."id",
         "insights_survey"."team_id",
         "insights_survey"."name",
         "insights_survey"."description",
         "insights_survey"."linked_flag_id",
         "insights_survey"."targeting_flag_id",
         "insights_survey"."linked_insight_id",
         "insights_survey"."internal_targeting_flag_id",
         "insights_survey"."internal_response_sampling_flag_id",
         "insights_survey"."type",
         "insights_survey"."conditions",
         "insights_survey"."questions",
         "insights_survey"."appearance",
         "insights_survey"."created_at",
         "insights_survey"."created_by_id",
         "insights_survey"."start_date",
         "insights_survey"."end_date",
         "insights_survey"."updated_at",
         "insights_survey"."archived",
         "insights_survey"."responses_limit",
         "insights_survey"."response_sampling_start_date",
         "insights_survey"."response_sampling_interval_type",
         "insights_survey"."response_sampling_interval",
         "insights_survey"."response_sampling_limit",
         "insights_survey"."response_sampling_daily_limits",
         "insights_survey"."iteration_count",
         "insights_survey"."iteration_frequency_days",
         "insights_survey"."iteration_start_dates",
         "insights_survey"."current_iteration",
         "insights_survey"."current_iteration_start_date",
         "insights_survey"."schedule",
         "insights_survey"."enable_partial_responses",
         "insights_survey"."enable_iframe_embedding",
         "insights_survey"."headline_summary",
         "insights_survey"."headline_response_count",
         "insights_survey"."question_summaries",
         "insights_survey"."form_content",
         "insights_featureflag"."id",
         "insights_featureflag"."key",
         "insights_featureflag"."name",
         "insights_featureflag"."filters",
         "insights_featureflag"."rollout_percentage",
         "insights_featureflag"."team_id",
         "insights_featureflag"."created_by_id",
         "insights_featureflag"."created_at",
         "insights_featureflag"."updated_at",
         "insights_featureflag"."deleted",
         "insights_featureflag"."active",
         "insights_featureflag"."version",
         "insights_featureflag"."last_modified_by_id",
         "insights_featureflag"."rollback_conditions",
         "insights_featureflag"."performed_rollback",
         "insights_featureflag"."ensure_experience_continuity",
         "insights_featureflag"."usage_dashboard_id",
         "insights_featureflag"."has_enriched_analytics",
         "insights_featureflag"."is_remote_configuration",
         "insights_featureflag"."has_encrypted_payloads",
         "insights_featureflag"."evaluation_runtime",
         "insights_featureflag"."bucketing_identifier",
         "insights_featureflag"."last_called_at",
         T5."id",
         T5."key",
         T5."name",
         T5."filters",
         T5."rollout_percentage",
         T5."team_id",
         T5."created_by_id",
         T5."created_at",
         T5."updated_at",
         T5."deleted",
         T5."active",
         T5."version",
         T5."last_modified_by_id",
         T5."rollback_conditions",
         T5."performed_rollback",
         T5."ensure_experience_continuity",
         T5."usage_dashboard_id",
         T5."has_enriched_analytics",
         T5."is_remote_configuration",
         T5."has_encrypted_payloads",
         T5."evaluation_runtime",
         T5."bucketing_identifier",
         T5."last_called_at",
         T6."id",
         T6."key",
         T6."name",
         T6."filters",
         T6."rollout_percentage",
         T6."team_id",
         T6."created_by_id",
         T6."created_at",
         T6."updated_at",
         T6."deleted",
         T6."active",
         T6."version",
         T6."last_modified_by_id",
         T6."rollback_conditions",
         T6."performed_rollback",
         T6."ensure_experience_continuity",
         T6."usage_dashboard_id",
         T6."has_enriched_analytics",
         T6."is_remote_configuration",
         T6."has_encrypted_payloads",
         T6."evaluation_runtime",
         T6."bucketing_identifier",
         T6."last_called_at"
  FROM "insights_survey"
  INNER JOIN "insights_team" ON ("insights_survey"."team_id" = "insights_team"."id")
  LEFT OUTER JOIN "insights_featureflag" ON ("insights_survey"."linked_flag_id" = "insights_featureflag"."id")
  LEFT OUTER JOIN "insights_featureflag" T5 ON ("insights_survey"."targeting_flag_id" = T5."id")
  LEFT OUTER JOIN "insights_featureflag" T6 ON ("insights_survey"."internal_targeting_flag_id" = T6."id")
  WHERE ("insights_team"."project_id" = 99999
         AND NOT ("insights_survey"."archived"))
  '''
# ---
# name: TestSurveysAPIList.test_list_surveys.12
  '''
  SELECT ("insights_survey_actions"."survey_id") AS "_prefetch_related_val_survey_id",
         "insights_action"."id",
         "insights_action"."name",
         "insights_action"."description",
         "insights_action"."team_id",
         "insights_action"."project_id",
         "insights_action"."created_at",
         "insights_action"."created_by_id",
         "insights_action"."deleted",
         "insights_action"."post_to_slack",
         "insights_action"."slack_message_format",
         "insights_action"."updated_at",
         "insights_action"."bytecode",
         "insights_action"."bytecode_error",
         "insights_action"."steps_json",
         "insights_action"."pinned_at",
         "insights_action"."summary",
         "insights_action"."last_summarized_at",
         "insights_action"."embedding_last_synced_at",
         "insights_action"."embedding_version",
         "insights_action"."is_calculating",
         "insights_action"."last_calculated_at"
  FROM "insights_action"
  INNER JOIN "insights_survey_actions" ON ("insights_action"."id" = "insights_survey_actions"."action_id")
  WHERE 'insights_survey_actions'.'survey_id' IN ('00000000-0000-0000-0000-000000000000'::uuid,
                                                 '00000000-0000-0000-0000-000000000001'::uuid, /* ... */])
  '''
# ---
# name: TestSurveysAPIList.test_list_surveys.2
  '''
  SELECT "insights_integration"."id",
         "insights_integration"."team_id",
         "insights_integration"."kind",
         "insights_integration"."integration_id",
         "insights_integration"."config",
         "insights_integration"."sensitive_config",
         "insights_integration"."errors",
         "insights_integration"."created_at",
         "insights_integration"."created_by_id"
  FROM "insights_integration"
  WHERE ("insights_integration"."kind" = 'vercel'
         AND "insights_integration"."team_id" = 99999)
  LIMIT 21
  '''
# ---
# name: TestSurveysAPIList.test_list_surveys.3
  '''
  SELECT "insights_filesystem"."team_id",
         "insights_filesystem"."id",
         "insights_filesystem"."path",
         "insights_filesystem"."depth",
         "insights_filesystem"."type",
         "insights_filesystem"."ref",
         "insights_filesystem"."href",
         "insights_filesystem"."shortcut",
         "insights_filesystem"."meta",
         "insights_filesystem"."created_at",
         "insights_filesystem"."created_by_id",
         "insights_filesystem"."project_id"
  FROM "insights_filesystem"
  WHERE ("insights_filesystem"."ref" = '0001'
         AND "insights_filesystem"."team_id" = 99999
         AND "insights_filesystem"."type" = 'feature_flag'
         AND NOT ("insights_filesystem"."shortcut"
                  AND "insights_filesystem"."shortcut" IS NOT NULL))
  '''
# ---
# name: TestSurveysAPIList.test_list_surveys.4
  '''
  SELECT "insights_integration"."id",
         "insights_integration"."team_id",
         "insights_integration"."kind",
         "insights_integration"."integration_id",
         "insights_integration"."config",
         "insights_integration"."sensitive_config",
         "insights_integration"."errors",
         "insights_integration"."created_at",
         "insights_integration"."created_by_id"
  FROM "insights_integration"
  WHERE ("insights_integration"."kind" = 'vercel'
         AND "insights_integration"."team_id" = 99999)
  LIMIT 21
  '''
# ---
# name: TestSurveysAPIList.test_list_surveys.5
  '''
  SELECT "insights_filesystem"."team_id",
         "insights_filesystem"."id",
         "insights_filesystem"."path",
         "insights_filesystem"."depth",
         "insights_filesystem"."type",
         "insights_filesystem"."ref",
         "insights_filesystem"."href",
         "insights_filesystem"."shortcut",
         "insights_filesystem"."meta",
         "insights_filesystem"."created_at",
         "insights_filesystem"."created_by_id",
         "insights_filesystem"."project_id"
  FROM "insights_filesystem"
  WHERE ("insights_filesystem"."ref" = '0001'
         AND "insights_filesystem"."team_id" = 99999
         AND "insights_filesystem"."type" = 'feature_flag'
         AND NOT ("insights_filesystem"."shortcut"
                  AND "insights_filesystem"."shortcut" IS NOT NULL))
  '''
# ---
# name: TestSurveysAPIList.test_list_surveys.6
  '''
  SELECT "insights_integration"."id",
         "insights_integration"."team_id",
         "insights_integration"."kind",
         "insights_integration"."integration_id",
         "insights_integration"."config",
         "insights_integration"."sensitive_config",
         "insights_integration"."errors",
         "insights_integration"."created_at",
         "insights_integration"."created_by_id"
  FROM "insights_integration"
  WHERE ("insights_integration"."kind" = 'vercel'
         AND "insights_integration"."team_id" = 99999)
  LIMIT 21
  '''
# ---
# name: TestSurveysAPIList.test_list_surveys.7
  '''
  SELECT "insights_filesystem"."team_id",
         "insights_filesystem"."id",
         "insights_filesystem"."path",
         "insights_filesystem"."depth",
         "insights_filesystem"."type",
         "insights_filesystem"."ref",
         "insights_filesystem"."href",
         "insights_filesystem"."shortcut",
         "insights_filesystem"."meta",
         "insights_filesystem"."created_at",
         "insights_filesystem"."created_by_id",
         "insights_filesystem"."project_id"
  FROM "insights_filesystem"
  WHERE ("insights_filesystem"."ref" = '0001'
         AND "insights_filesystem"."team_id" = 99999
         AND "insights_filesystem"."type" = 'survey'
         AND NOT ("insights_filesystem"."shortcut"
                  AND "insights_filesystem"."shortcut" IS NOT NULL))
  '''
# ---
# name: TestSurveysAPIList.test_list_surveys.8
  '''
  SELECT "insights_user"."id",
         "insights_user"."password",
         "insights_user"."last_login",
         "insights_user"."first_name",
         "insights_user"."last_name",
         "insights_user"."is_staff",
         "insights_user"."date_joined",
         "insights_user"."uuid",
         "insights_user"."current_organization_id",
         "insights_user"."current_team_id",
         "insights_user"."email",
         "insights_user"."pending_email",
         "insights_user"."temporary_token",
         "insights_user"."distinct_id",
         "insights_user"."is_email_verified",
         "insights_user"."requested_2fa_reset_at",
         "insights_user"."has_seen_product_intro_for",
         "insights_user"."strapi_id",
         "insights_user"."is_active",
         "insights_user"."role_at_organization",
         "insights_user"."theme_mode",
         "insights_user"."partial_notification_settings",
         "insights_user"."anonymize_data",
         "insights_user"."allow_impersonation",
         "insights_user"."toolbar_mode",
         "insights_user"."mascot_config",
         "insights_user"."allow_sidebar_suggestions",
         "insights_user"."shortcut_position",
         "insights_user"."passkeys_enabled_for_2fa",
         "insights_user"."events_column_config",
         "insights_user"."email_opt_in"
  FROM "insights_user"
  WHERE "insights_user"."id" = 99999
  LIMIT 21
  '''
# ---
# name: TestSurveysAPIList.test_list_surveys.9
  '''
  SELECT "insights_team"."id"
  FROM "insights_team"
  WHERE ("insights_team"."organization_id" = '00000000-0000-0000-0000-000000000000'::uuid
         AND "insights_team"."receive_org_level_activity_logs")
  '''
# ---
